# social_media_lurkers

./: .gitignore  README.md  app.py  braindump.md  config.py  env.example  pyproject.toml  spec_reviews.md
agents/: __init__.py  conversation_agent.py  reflection_agent.py  router_agent.py
lib/: telemetry.py
projects/2025-10-16_issue-discovery-chatbot/: README.md  lessons_learned.md  logs.md  metrics.md  plan_issue_discovery.md  review_synthesis.md  spec.md  todo.md
projects/2025-10-16_issue-discovery-chatbot/retrospective/: README.md
projects/2025-10-21_posthog-ab-testing/: CODE_REVIEW_CONTEXT.md  IMPLEMENTATION_SUMMARY.md  POSTHOG_VERIFICATION_GUIDE.md  README.md  TESTING_GUIDE.md  braindump.md  lessons_learned.md  logs.md  metrics.md  plan_implementation.md  spec.md  todo.md
projects/2025-10-21_posthog-ab-testing/retrospective/: README.md
projects/2025-10-21_posthog-ab-testing/tickets/: ticket-001.md  ticket-002.md  ticket-003.md  ticket-004.md  ticket-005.md  ticket-006.md  ticket-007.md
prompts/: README.md  v1_conversation_system.txt  v1_reflection_system.txt  v1_router_system.txt
social_media_app/: .gitignore  README.md  TELEMETRY.md
social_media_app/backend/: .coveragerc  .gitignore  Dockerfile  README.md  docker-compose.yml  otel-collector-config.yaml  prometheus.yml  pyproject.toml  pytest.ini  ruff.toml
social_media_app/backend/app/: data.py  main.py  schemas.py  telemetry.py
social_media_app/frontend/: .env.example  eslint.config.mjs  jest.config.js  next.config.ts  package-lock.json  package.json
workflows/: conversation_flow.py
(+44 files in other folders)
